Added logo Logo on...

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>craigb.xyz</title>
 </head>
 <body>
+    <header>
+        <img src="images/cb_logo.png" alt="CB logo">
+    </header>
     <h1>craig betney</h1>
     <p>Welcome to my new website</p>
     <p>please bear with me...</p>
